First attempt to fix overflow bug with footer on mobile.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -773,6 +773,8 @@ hr {
 
 @media only screen and (max-width: 480px) {
   #footer {
+    overflow: hidden;
+
     .right-column {
       font-size: 1.5em;
 
